manifest/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: myapp
  selector:
    matchLabels:
      app: myapp
    metadata:
      labels:
    spec:
      containers:
      - name: myapp
        image: nginx
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
