manifest/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: argocd
  namespace: default
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: argo-cd-argocd-server-default.apps-crc.testing
  to:
    kind: Service
    name: argo-cd-argocd-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
